fix: adjust home buttons on mobile

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -36,6 +36,16 @@
     width: 200px;
 }
 
-.demo {
-    margin: 20px 36px;
+.demo, .getStarted {
+    margin: 20px 18px;
+}
+
+@media screen and (max-width: 480px) {
+    .buttons {
+        flex-direction: column;
+    }
+
+    .demo, .getStarted {
+        margin: 10px 18px;
+    }
 }
